--- a/_posts/2019-07-02-the-us-narrative-today.html
+++ b/_posts/2019-07-02-the-us-narrative-today.html
@@ -2587,107 +2587,107 @@ stories:
   domain: http://www.advertiserplymouthoh.com/
   link: http://advertiserplymouthoh.com/index.php/2015/02/12/know-the-disadvantages-of-being-a-journalist/
 images:
-- name: file-00_00_00_00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00_00_00_00.jpg
-- name: supreme-court-supremecourt-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dry-skin.jpg
-- name: sand-hand-sand-hand-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-nazi-poster.jpg
-- name: capital-battle-capitolbattle-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-far-away.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-granite.png
-- name: aws-s3-canyon-canyon-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still.jpg
-- name: dragon-desert-desert-dragon-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-emily-carr.jpg
-- name: aws-s3-kerbypeak-kerbypeak-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-kerbypeak-kerbypeak-still-600.jpg
-- name: old-granary-field-granaryfield-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-yellow-collage.jpg
-- name: old-gas-pumps-oldgaspumps-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kand-two.jpg
-- name: oldhousecars-house-old-cars-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-blue-granite.jpg
-- name: abandonedbuildings_really_hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_really_hot.jpg
-- name: amusement-park-amusement-park-2-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-crunch-paper.jpg
-- name: mediterranean-mediterranean-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-emily-carr.jpg
-- name: containership-containership-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-5.jpg
-- name: supreme-court-supremecourt-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-dark-soul.jpg
-- name: mosaic-face-mosaic-face-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-dresden.jpg
-- name: oldtrain-oldtrain-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-color.jpg
-- name: eduardo-eduardo-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-cinnamon-rolls.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg.JPG
-- name: blossombar-dark-soul-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-24-99.jpg
-- name: dragon-desert-desert-dragon-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-matrix.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-really-hot.jpg
-- name: dragon-desert-desert-dragon-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-diego-rivera1.jpg
-- name: nyc-flag-nycflag-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dry-skin.jpg
-- name: hollywood-building-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
-- name: gypsymosaic-gypsy-eyes-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-colorful-blocks.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-internet-numbers.jpg
-- name: art-museum-art-museum-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-neo-instinct.jpg
-- name: old-granary-field-granaryfield-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purp-paper.jpg
-- name: mistywoods-babyfoot-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dry-skin.jpg
-- name: catacombs-catacombs-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-post-modern.jpg
-- name: carry-load-carryload-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-blue-granite.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-oily-mcoilface.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-monet-one.jpg
-- name: border-crossing-bordercrossing-purple-pond.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purple-pond.png
-- name: aws-s3-stories-vancouver-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-light-dali.jpg
-- name: berlinwall2-berlinwall-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-collage.jpg
-- name: ellis-island-ellisisland-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-spagetti-accident.jpg
-- name: capital-battle-capitolbattle-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-blue-brush.jpg
-- name: oldhousecars-house-old-cars-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-atari-missle.jpg
-- name: flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-circuit-3.jpg
-- name: mediterranean-mediterranean-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-bright-sand.jpg
+- name: machine-road-machine-road-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-crabapple.jpg
+- name: yuma-bank-yuma-bak-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-dali-two.jpg
+- name: ellis-island-ellisisland-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-sunday.jpg
+- name: old-granary-field-oldhouse-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-atari-missle.jpg
+- name: ellis-island-ellis-island-room-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-satan-red.jpg
+- name: gypsy-wagon-gypsywagon-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-wols.jpg
+- name: dragon-desert-desert-dragon-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-dark-soul.jpg
+- name: old-school-house-old-schoolhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-deep-connections.jpg
 - name: bordercrossing-bordercrossing-creativity.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-creativity.jpg
-- name: miamibeach-miamibeach-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-cinnamon-rolls.jpg
-- name: abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smooth-ride-file-00-00-07-91.jpg
-- name: containership-containership-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-cinnamon-rolls.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-crafty-painting.jpg
-- name: old-granary-field-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-electricity.jpg
-- name: birdhouse-birdhouse-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-wols.jpg
-- name: nyc-flag-nycflag-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-constitution.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-sand-paper.jpg
+- name: school-clouds-church-clouds-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-marcel-duchamp.jpg
+- name: eduardo-eduardo-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-blue-granite.jpg
+- name: server-cloud-server-racks-clouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crafty-painting.jpg
+- name: downtown-los-angeles-downtown-la-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit-4.JPG
+- name: stories-new-68-174-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-68-174-800-500-0-max-0--5--1.jpg
+- name: walled-garden-walled-garden-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-smoking-cigarette.jpg
+- name: meadowbutterfly-meadow-butterfly-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-marcel-duchamp.jpg
+- name: downtown-los-angeles-downtown-la-colored-circuits.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-colored-circuits.JPG
+- name: stories-status-berlin-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-propaganda-leaflets.jpg
+- name: flower-barbed-wire-flower-barbed-wire-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-purple-storm.jpg
+- name: liberty-back-statue-liberty-back-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-neo-instinct.jpg
+- name: yosemite-yosemite-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-ww2-color.jpg
+- name: razorcliff-razorcliff-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-alberto-giacometti.jpg
+- name: oldtrain-oldtrain-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-free-woman.jpg
+- name: catacombs-catacombs-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-internet-numbers.jpg
+- name: abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-post-modern-file-00-00-15-87.jpg
+- name: downtown-trucksilo-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-colorful-dream.jpg
+- name: docks-docks-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-gred-mash.jpg
+- name: downtown-los-angeles-downtown-la-marcel-duchamp.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-marcel-duchamp.JPG
+- name: downtown-la.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la.JPG
+- name: oldhouse-granaryfield-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-satan-red.jpg
+- name: border-crossing-bordercrossing-nazi-poster.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-nazi-poster.png
+- name: mediterranean-mediterranean-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-gred-mash.jpg
+- name: liberty-back-statue-liberty-back-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alberto-giacometti.jpg
+- name: old-granary-field-granaryfield-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-plentiful.jpg
+- name: 35201856153_61bc075e4b-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35201856153_61bc075e4b-copper-circuit.jpg
+- name: aws-s3-treeinhills-yellowtree-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-treeinhills-yellowtree-still-1200.jpg
+- name: amusement-park-amusement-park-2-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-far-away.jpg
+- name: christianity-christianity-under-construction-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-gred-mash.jpg
+- name: downtown-la-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
+- name: status-berlin-status-berlin-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-clean-view.jpg
+- name: beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-atari-asteroids.jpg
+- name: beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-crafty-painting.jpg
+- name: power-lines-power-lines-empty-space-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-clean-view.jpg
+- name: gypsy-wagon-gypsywagon-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-nazi-poster.jpg
+- name: power-lines-power-lines-empty-space-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-constitution.jpg
+- name: power-lines-power-lines-empty-space-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kand-two.jpg
+- name: curtain-curtain-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-umberto-bocc.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-dark-rain.jpg
+- name: catacombs-catacombs-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-purp-paper.jpg
+- name: oldcabin-store-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-diego-rivera1.jpg
 ---
 Rotted Wooden Sculpture Of Native American To Be Replaced.&nbsp;Teen Driver Charged In Death Of Auburn Announcer.&nbsp;Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;Make Your Own Beautiful, Durable Concrete Countertops.&nbsp;'Warrior' Julianne Hough Praised By Husband.&nbsp;Incinerator Opponents Gather To Celebrate Signing Of Law.&nbsp;Stutsman County Farm Bureau Awards Scholarships.&nbsp;Triple Murder Suspect Is An Illegal Alien.&nbsp;
